Added configuration for job openings collection

--- a/_config.yml
+++ b/_config.yml
@@ -25,4 +25,8 @@ development:
 
 exclude: ['badges']
 
-
+# Collections settings
+collections:
+  job_openings:
+    output: true
+    permalink: jobs/:title
