Added hidden field to job openings

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -64,6 +64,7 @@ collections:
         name: 'requirements'
         widget: 'list'
         field: {label: 'Requirement', name: 'requirement', widget: 'string'}
+      - { label: 'Hidden', name: 'hidden', widget: 'boolean', default: false }
 
   - name: 'data'
     label: 'Data'
