--- a/admin/config.yml
+++ b/admin/config.yml
@@ -53,7 +53,7 @@ collections:
           label: 'Time',
           name: 'time',
           widget: 'select',
-          options: ['Full Time', 'Half-Time'],
+          options: ['Full Time', 'Half-Time / Hourly'],
         }
       - { label: 'Description', name: 'description', widget: 'text' }
       - label: 'Responsibilities'
