--- a/admin/config.yml
+++ b/admin/config.yml
@@ -38,6 +38,7 @@ collections:
       - { label: 'Type', name: 'type', widget: 'hidden', default: 'article' }
       - { label: 'Keywords', name: 'keywords', widget: 'string' }
       - { label: 'Tags', name: 'tags', widget: 'string' }
+      - { label: 'Hidden', name: 'hidden', widget: 'boolean', default: false }
       - { label: 'Body', name: 'body', widget: 'markdown' }
 
   - name: 'job_openings'
