Change jobs to careers

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ exclude: ['badges']
 collections:
   job_openings:
     output: true
-    permalink: jobs/:title
+    permalink: careers/:title
   posts:
     output: true
     permalink: blog/:title
