--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ github: [metadata]
 title: AcklenAvenue-Website
 email: info@acklenavenue.com
 description: >
-  Acklen Avenue is a team of agile software development professionals who are passionate about clean code and simple user experiences.
-  Thanks to our team's heroic efforts and our clients' amazing ideas, Acklen Avenue lovingly delivers software daily from Nashville and around the world.
+ Your partner in building powerful apps users love, Acklen Avenue offers agile software development teams as a service.
 
 url: "http://acklenavenue.com"
 twitter_username: acklenavenue
