Revert "Update meta description within head.html"

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ github: [metadata]
 title: AcklenAvenue-Website
 email: info@acklenavenue.com
 description: >
-  Your partner in building powerful apps users love, Acklen Avenue offers agile software development teams as a service.
+  Acklen Avenue is a leading custom software development in Nashville, Tennessee. 
+  Our talented team is passionate about clean code and simple user experience.
 
 url: "http://acklenavenue.com"
 twitter_username: acklenavenue
