--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ github: [metadata]
 title: AcklenAvenue-Website
 email: info@acklenavenue.com
 description: >
-  Acklen Avenue is a leading custom software development in Nashville, Tennessee. 
-  Our talented team is passionate about clean code and simple user experience.
+  Your partner in building powerful apps users love, Acklen Avenue offers agile software development teams as a service.
 
 url: "http://acklenavenue.com"
 twitter_username: acklenavenue
